revamped java client (its not taht good)